deployment_DEV.yml
apiVersion: v1
kind: Namespace
metadata:
  name: track-order-detail

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: track-order-detail-depl
  labels:
    app: track-order-detail
  namespace: track-order-detail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: track-order-detail
  template:
    metadata:
      labels:
        app: track-order-detail
    spec:
      containers:
      - name: track-order-detail
        image: localhost:8888/track_order_detail:Release_20220715171449
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /wrapper_broadband/logs
          name: logs-volume
      volumes:
      - name: logs-volume
        hostPath:
          path: /data/rule_engine_logs/
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: track-order-detail-lb
  namespace: track-order-detail
spec:
  selector:
    app: track-order-detail
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  externalTrafficPolicy: Local
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: track-order-detail-ingress
  namespace: track-order-detail
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
        - path: /broadband
          pathType: Prefix
          backend:
            service:
              name: track-order-detail-lb
              port:
                number: 5000

---
kind: Service
apiVersion: v1
metadata:
  name: rengine-pgdb-service
  namespace: track-order-detail
spec:
  clusterIP: None
  ports:
  - port: 5432
---
kind: Endpoints
apiVersion: v1
metadata:
  name: rengine-pgdb-service
  namespace: track-order-detail
subsets:
  - addresses:
    - ip: 10.241.149.244
    ports:
      - port: 5432
        name: rengine-pgdb-service

---
apiVersion: v1
kind: Service
metadata:
 name: kafka-cluster-service
 namespace: track-order-detail
spec:
  clusterIP: None
  ports:
    - port: 9092
---
apiVersion: v1
kind: Endpoints
metadata:
 name: kafka-cluster-service
 namespace: track-order-detail
subsets:
  - addresses:
    - ip: 10.241.148.250
    - ip: 10.241.148.252
    - ip: 10.241.148.253
    ports:
      - port: 9092
        name: kafka-cluster-service
